added html versions
changed background color; added rotation; made the cat smaller

--- a/svg_shape.html
+++ b/svg_shape.html
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 550 300" style="enable-background:new 0 0 550 300;" xml:space="preserve">
+<!--html version -->
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>SVG shape altered html</title>
+	</head>
+	<body>
+	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 550 300" style="enable-background:new 0 0 550 300;" xml:space="preserve">
 	<defs>
 		<filter id="my-filter" x="0" y="0">
 			<feGaussianBlur in="SourceGraphic" stdDeviation="15" />
@@ -35,7 +39,7 @@
 
 	<!-- rectangle -->
 	<rect x="30" y="30" width="140" height="240" fill="url(#gradient3)" >
-<animateTransform
+	<animateTransform
 				attributeName="transform"
 				begin="0s"
 				dur="3s"
@@ -44,6 +48,7 @@
 				to="360 285 251"
 				repeatCount="indefinite" />
 			</rect>
+
 	<!-- Circle -->
 	<circle cx="270" cy="150" r="120" fill="url(#gradient1)" />
 
@@ -53,3 +58,5 @@
 	<!-- Line -->
 	<!-- <line x1="0" y1="150" x2="550" y2="150" stroke="black" stroke-width="1" />  -->
 </svg>
+</body>
+</html>
